# code_review_ai

./: CMakeLists.txt  Dockerfile  PROJECT_REBUILD_SUMMARY.md  README.md  app.py  build.py  requirements.txt  run.sh
config/: app_config.py
core_cpp/: text_streamer.cpp
gui/: file_loader.py  main_window.py
llm_interface/: qwen_runner.py  review_task.py
test_files/: noerror.py  test_files_examples.md  testfile1.py  werror.py
tests/: script.py  script_1.py
